@@ -1,3 +1,9 @@
+Mon Sep 29 07:44:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/PI/ORBInitInfo.h:
+        * tao/Utils/ORB_Manager.cpp:
+          ACE_TCHAR changes
+
 Mon Sep 29 07:42:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/ImplRepo_Service/tao_imr_i.cpp
